--- a/source/game/GameSettings.yaml
+++ b/source/game/GameSettings.yaml
@@ -14,6 +14,8 @@ KeyInputSettings:
     - json_with_keys
 
   retryLevel: [ KeyInput::Key, GLFW_KEY_R ]
+  flyCamera: [ KeyInput::Key, GLFW_KEY_F9 ]
+  stopFlyingCamera: [ KeyInput::Key, GLFW_KEY_ESCAPE ]
 
 Settings:
   _flags:
