render model with default shader

--- a/source/ecs/components/graphics/Camera.yaml
+++ b/source/ecs/components/graphics/Camera.yaml
@@ -2,3 +2,4 @@ CameraPerspective:
   fieldOfView: [float, 75]
   nearClipPlane: [float, .1]
   farClipPlane: [float, 1000]
+  visibilityMask: [uint, 1]
