--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 *.lvl filter=lfs diff=lfs merge=lfs -text
 *.ttf filter=lfs diff=lfs merge=lfs -text
+*.blend filter=lfs diff=lfs merge=lfs -text
+*.ubj filter=lfs diff=lfs merge=lfs -text
