--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.ttf filter=lfs diff=lfs merge=lfs -text
 *.blend filter=lfs diff=lfs merge=lfs -text
 *.ubj filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
