--- a/source/game/GameSettings.yaml
+++ b/source/game/GameSettings.yaml
@@ -7,6 +7,7 @@ GraphicsSettings:
     - json_with_keys
 
   imGuiFont: [string, "assets/fonts/ruda/Ruda-Bold.ttf"]
+  gammaCorrection: [float, 2.2]
 
 KeyInputSettings:
   _flags:
