fixed transform matrices for vertices. Next step: vertex shader

--- a/source/ecs/components/graphics/Model.yaml
+++ b/source/ecs/components/graphics/Model.yaml
@@ -21,4 +21,4 @@ PlayAnimation:
 Rigged:
   playingAnimations: std::list<PlayAnimation>
   _cpp_only:
-    boneAnimTransform: std::unordered_map<SharedBone, mat4>
+    bonePoseTransform: std::unordered_map<SharedBone, mat4>
