--- a/source/game/GameSettings.yaml
+++ b/source/game/GameSettings.yaml
@@ -9,6 +9,7 @@ GraphicsSettings:
   imGuiFont: [string, "assets/fonts/ruda/Ruda-Bold.ttf"]
   gammaCorrection: [float, 2.2]
   shadows: [bool, true]
+  maxArmatureBones: [uint, 64]
 
   debugShadowBoxes: [bool, true]
   debugArmatures: [bool, true]
