--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.blend filter=lfs diff=lfs merge=lfs -text
 *.ubj filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+*.hdr filter=lfs diff=lfs merge=lfs -text
