--- a/source/game/GameSettings.yaml
+++ b/source/game/GameSettings.yaml
@@ -25,6 +25,8 @@ GraphicsSettings:
   fogEnd: [float, 30]
   fogEnabled: [bool, true]
 
+  prefilteredReflectionMapResolution: [uint, 256]
+  prefilteredReflectionMapSamples: [uint, 2048]
   convolutionStepDelta: [float, 0.02]
 
   debugShadowBoxes: [bool, true]
