--- a/source/ecs/components/Physics.yaml
+++ b/source/ecs/components/Physics.yaml
@@ -8,7 +8,7 @@ config:
     - reactphysics3d::ConvexShape
     - reactphysics3d::ConcaveShape
 
-RigidBody:
+RigidBody @dirtyable:
   dynamic: bool
   gravity: [bool, true]
   allowSleep: [bool, true]
@@ -22,20 +22,17 @@ RigidBody:
   linearAxisFactor: [vec3, vec3(1)]
   angularAxisFactor: [vec3, vec3(1)]
 
-  _hash: [dynamic, gravity, allowSleep, angularDamping, linearDamping, mass, linearAxisFactor.x, linearAxisFactor.y, linearAxisFactor.z, angularAxisFactor.x, angularAxisFactor.y, angularAxisFactor.z]
-
   _cpp_only:
     reactBody: [reactphysics3d::RigidBody *, NULL]
-    prevHash: [size_t, -1]
   
-Collider:
+Collider @dirtyable:
   rigidBodyEntity: [entt::entity, entt::null]
 
   bounciness: float
   frictionCoefficent: float
 
-  collisionCategoryBits: unsigned short
-  collideWithMaskBits: unsigned short
+  collisionCategoryBits: uint16
+  collideWithMaskBits: uint16
 
   bodyOffsetTranslation: vec3
   bodyOffsetRotation: [quat, "quat(1, 0, 0, 0)"]
@@ -44,28 +41,28 @@ Collider:
     prevRigidBodyEntity: [entt::entity, entt::null]
     reactCollider: [reactphysics3d::Collider *, NULL]
 
-BoxColliderShape:
+BoxColliderShape @dirtyable:
   halfExtents: [vec3, vec3(1)]
   _cpp_only:
     shapeReact: [reactphysics3d::BoxShape *, NULL]
 
-SphereColliderShape:
+SphereColliderShape @dirtyable:
   radius: [float, 1]
   _cpp_only:
     shapeReact: [reactphysics3d::SphereShape *, NULL]
 
-CapsuleColliderShape:
+CapsuleColliderShape @dirtyable:
   sphereRadius: [float, 1]
   sphereDistance: [float, 1]
   _cpp_only:
     shapeReact: [reactphysics3d::CapsuleShape *, NULL]
 
-ConvexColliderShape:
+ConvexColliderShape @dirtyable:
   modelName: std::string
   _cpp_only:
     shapeReact: [reactphysics3d::ConvexShape *, NULL]
 
-ConcaveColliderShape:
+ConcaveColliderShape @dirtyable:
   modelName: std::string
   _cpp_only:
     shapeReact: [reactphysics3d::ConcaveShape *, NULL]
