--- a/html/CMakeLists.txt
+++ b/html/CMakeLists.txt
@@ -30,6 +30,8 @@ target_link_libraries(game reactphysics3d)
 # im3d:
 add_compile_definitions(IM3D_CONFIG="../../source/rendering/level/room/im3d_config.h")
 add_library(im3d ../external/im3d/im3d.h ../external/im3d/im3d_math.h ../external/im3d/im3d.cpp)
+set_property(TARGET im3d PROPERTY CXX_STANDARD 17)
+set_property(TARGET im3d PROPERTY CXX_STANDARD_REQUIRED ON)
 target_include_directories(im3d PUBLIC ../external/im3d/)
 target_link_libraries(im3d glm)
 target_link_libraries(game im3d)
