--- a/source/game/GameSettings.yaml
+++ b/source/game/GameSettings.yaml
@@ -14,8 +14,8 @@ GraphicsSettings @not_a_component @json_with_keys:
   bloomThreshold: [float, 1.7]
   shadows: [bool, true]
   maxArmatureBones: [uint, 64]
-  fogStart: [float, 10]
-  fogEnd: [float, 30]
+  fogStart: [float, 30]
+  fogEnd: [float, 60]
   fogEnabled: [bool, true]
 
   prefilteredReflectionMapResolution: [uint, 256]
@@ -34,6 +34,7 @@ KeyInputSettings @not_a_component @json_with_keys:
   retryLevel: [ KeyInput::Key, GLFW_KEY_F10 ]
   stopFlyingCamera: [ KeyInput::Key, GLFW_KEY_ESCAPE ]
 
+  moveEntity: [ KeyInput::Key, GLFW_KEY_G ]
   gizmoNeedCtrl: [bool, true]
   gizmoToggleLocal: [KeyInput::Key, GLFW_KEY_L]
   gizmoTranslate: [KeyInput::Key, GLFW_KEY_T]
