--- a/desktop/CMakeLists.txt
+++ b/desktop/CMakeLists.txt
@@ -28,18 +28,14 @@ set_property(TARGET game PROPERTY CXX_STANDARD_REQUIRED ON)
 
 # dibidab-engine repo:
 add_subdirectory(../external/dibidab-engine ./bin/dibidab-engine)
-target_link_libraries(game dibidab)
-
-# reactphysics3d:
-add_subdirectory(../external/reactphysics3d ./bin/reactphysics3d)
-target_link_libraries(game reactphysics3d)
+target_link_libraries(game PUBLIC dibidab)
 
 # im3d:
 add_compile_definitions(IM3D_CONFIG="../../source/rendering/level/room/im3d_config.h")
 add_library(im3d ../external/im3d/im3d.h ../external/im3d/im3d_math.h ../external/im3d/im3d.cpp)
 target_include_directories(im3d PUBLIC ../external/im3d/)
-target_link_libraries(im3d glm)
-target_link_libraries(game im3d)
+target_link_libraries(im3d PUBLIC glm)
+target_link_libraries(game PUBLIC im3d)
 
 # ---Generate structs with LUA SERDE---
 
