disc, cylinder, plane & plane-to-cylinder gravity fields

--- a/source/ecs/components/Gravity.yaml
+++ b/source/ecs/components/Gravity.yaml
@@ -12,6 +12,22 @@ SphereGravityFunction:
 DonutGravityFunction:
   donutRadius: float
   gravityRadius: float
+  
+DiscGravityFunction:
+  radius: float
+  gravityRadius: float
+  
+CylinderGravityFunction:
+  gravityRadius: float
+  height: float
+
+CylinderToPlaneGravityFunction:
+  cylinderRadius: float
+  gravityRadius: float
+  height: float
+
+PlaneGravityFunction:
+  f
 
 GravityFieldAffected:
   gravityScale: [float, 10]
