--- a/source/game/GameSettings.yaml
+++ b/source/game/GameSettings.yaml
@@ -51,10 +51,18 @@ KeyInputSettings @not_a_component @json_with_keys:
   gizmoRotate: [KeyInput::Key, GLFW_KEY_R]
   gizmoScale: [KeyInput::Key, GLFW_KEY_S]
 
+GamepadInputSettings @not_a_component @json_with_keys:
+  walkX: [GamepadInput::Axis, GLFW_GAMEPAD_AXIS_LEFT_X]
+  walkY: [GamepadInput::Axis, GLFW_GAMEPAD_AXIS_LEFT_Y]
+  jump: [GamepadInput::Button, GLFW_GAMEPAD_BUTTON_A]
+
+  test: [GamepadInput::Button, GLFW_GAMEPAD_BUTTON_B]
+
 Settings @not_a_component @json_with_keys:
 
   graphics: GraphicsSettings
   audio: AudioSettings
   keyInput: KeyInputSettings
+  gamepadInput: GamepadInputSettings
   customSettings: [ json, json::object() ]
   limitUpdatesPerSec: [ bool, false ]
