--- a/source/game/GameSettings.yaml
+++ b/source/game/GameSettings.yaml
@@ -39,6 +39,7 @@ KeyInputSettings @not_a_component @json_with_keys:
   walkBackwards: [KeyInput::Key, GLFW_KEY_S]
   walkRight: [KeyInput::Key, GLFW_KEY_D]
   jump: [KeyInput::Key, GLFW_KEY_SPACE]
+  fly: [KeyInput::Key, GLFW_KEY_F]
 
   flyCamera: [KeyInput::Key, GLFW_KEY_F9]
   retryLevel: [KeyInput::Key, GLFW_KEY_R]
@@ -55,6 +56,7 @@ GamepadInputSettings @not_a_component @json_with_keys:
   walkX: [GamepadInput::Axis, GLFW_GAMEPAD_AXIS_LEFT_X]
   walkY: [GamepadInput::Axis, GLFW_GAMEPAD_AXIS_LEFT_Y]
   jump: [GamepadInput::Button, GLFW_GAMEPAD_BUTTON_A]
+  fly: [GamepadInput::Button, GLFW_GAMEPAD_BUTTON_Y]
 
   test: [GamepadInput::Button, GLFW_GAMEPAD_BUTTON_B]
 
